Fixed buttons on mobile version

--- a/docs/css/responsive.css
+++ b/docs/css/responsive.css
@@ -152,6 +152,8 @@
 
 	.task_buttons a.btn {
 		width: 80%;
+		height: auto;
+		/* line-height: 2; */
 	}
 
 	/* section */
