--- a/docs/css/tables.css
+++ b/docs/css/tables.css
@@ -27,7 +27,7 @@
 
 table {
 	max-width: 100%;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 	background-color: #fff;
 }
 
